[package]
name = "workers-rs-sockets-test"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { git="https://github.com/cloudflare/workers-rs", branch="main" }
tokio = {version = "1.0", default-features=false, features=['io-util', 'macros']}
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
